k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: php
  name: php
  labels:
    app: php
spec:
#  replicas: 10
  selector:
    matchLabels:
      app: php
  template:
    metadata:              
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: php
          resources:        
            limits:
              cpu: "200m"   
              memory: "2Gi" 
            requests:        
              cpu: "100m"
              memory: "1Gi"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz.php
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
