k8s/service.yaml
apiVersion: v1 
kind: Service
metadata:
  namespace: php
  name: php-svc
spec:
  selector:
      app: php
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
