k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: php
  name: php-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: php-svc
              port:
                number: 8080
